[package]
name = "jvm-bindgen"
version = "0.1.0"
edition = "2021"
links = "jvm"
build = "./build.rs"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
oem_cp = "2.0.0"
once_cell = "1.17.1"
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full"] }
zip_structs = "0.2.1"
