[package]
name = "jvm-bindgen"
version = "0.1.0"
edition = "2021"
links = "jvm"
build = "./build.rs"

[lib]
proc-macro = true
jvm_target_dir = "/classes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full"] }

[build-dependencies]
toml = "0.7.3"
zip = "0.6.4"
